tests/integrations/json-basic-fail/tests/actual_tests/lone_joined_pattern.rs
fn main() {
    //~| ERROR: mismatched types
    use_unit(1_u32);
    //~| ERROR: mismatched types
}

fn use_unit(_: ()) {}
